--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,18 @@ h1, h3, h4, h5 {
 margin: 1 ; /* Añade un espacio arriba y abajo a los encabezados */
 }
 
-#respuestaImagen {
+.contenedor-imagen {
 width: 100%;
 max-width: 500px;
 border-radius: 10px;
 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 margin-top: 20px; 
+overflow: hidden;
+display: flex;
+gap: 10;
+}
+
+.contenedor-imagenes img:nth-child(2) {
+    width: 50px; /* Ajusta el ancho de la segunda imagen según tu preferencia */
+    height: auto;
 }
